fix course details topics | design alignment

--- a/theme/guru/style/custom_scss/_card.scss
+++ b/theme/guru/style/custom_scss/_card.scss
@@ -6,6 +6,12 @@
     font-size: 20px;
     line-height: 23px;
     color: $default;
+    min-height: 46px;
+
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .card-body {
@@ -17,7 +23,6 @@
 .card-text{
  
     p{
-        min-height: 80px;
         line-height: 20px;
         display: -webkit-box;
         -webkit-line-clamp: 4;
@@ -36,6 +41,7 @@
     font-weight: 300;
     font-size: 14px;
     line-height: 20px;
+    min-height: 85px;
 }
 
 
