--- a/theme/guru/style/scss.css
+++ b/theme/guru/style/scss.css
@@ -1044,6 +1044,11 @@ ul.pagination li.active {
   font-size: 20px;
   line-height: 23px;
   color: #555555 !important;
+  min-height: 46px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .card-body {
@@ -1058,10 +1063,10 @@ ul.pagination li.active {
   font-weight: 300;
   font-size: 14px;
   line-height: 20px;
+  min-height: 85px;
 }
 
 .card-text p {
-  min-height: 80px;
   line-height: 20px;
   display: -webkit-box;
   -webkit-line-clamp: 4;
